--- a/css/style.css
+++ b/css/style.css
@@ -513,8 +513,8 @@ element.style {
 
 /*testimonial section starts*/
 .testimonial {
-    width: 100%;
-    padding: 60px 0px 120px;
+	width: 100%;
+	padding: 60px 0px 120px;
 }
 .testimonial .heading03{
 	width: 100%;
@@ -558,19 +558,208 @@ element.style {
 	cursor: pointer;
 }
 .testimonial #carousel .media .mr-1 {
-    margin: 0px !important;
-    height: 100% !important;
-    width: 48% !important;
+	margin: 0px !important;
+	height: 100% !important;
+	width: 48% !important;
 }
 .testimonial #carousel .media .mr-2 {
-    margin: 0px !important;
-    height: 100% !important;
-    width: 48% !important;
+	margin: 0px !important;
+	height: 100% !important;
+	width: 48% !important;
 }
 .testimonial #carousel .media .mr-3 {
-    margin: 0px !important;
-    height: 100% !important;
-    width: 48% !important;
+	margin: 0px !important;
+	height: 100% !important;
+	width: 48% !important;
 }
 /*tesimonial section ends*/
+
+/*App news section starts*/
+.app-news{
+	width: 100%;
+	padding: 40px 0px 80px;
+}
+
+.app-news .heading04{
+	width: 100%;
+	padding: 0px 0px 100px;
+	text-align: center;
+}
+.app-news .heading04 h2{
+	font-size: 35px;
+	font-weight: 300;
+	line-height: 45px;
+	letter-spacing: 1px;
+	text-transform: capitalize;
+	color: #7954b6;
+	padding: 0px 0px 30px;
+	margin: 0px;
+}
+.app-news .heading04 p{
+	margin: 0px;
+	font-size: 16px;
+	font-weight: 400;
+	letter-spacing: 0px;
+	line-height: 26px;
+	color: #565656;
+	padding: 0px 0px 50px;
+}
+.app-news .heading04 .line{
+	width: 77px;
+	height: 2px;
+	background-color: #f34791;
+	position: absolute;
+	left: 46%;
+}
+.app-news .card {
+	width: 100%;
+	margin: 0px !important;
+	border: 2px solid #eee;
+}
+.app-news .card .card-img-top{
+
+}
+.app-news .card .card-body {
+	padding: 0px 20px 40px;
+	margin: 0px;
+	width: 100%;
+	font-family: 'Roboto', sans-serif;
+}
+.app-news .card .card-body .card-title {
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 36px;
+	text-transform: capitalize;
+	text-align: left;
+	/* padding: 30px 0px 15px; */
+}
+.app-news .card .card-body .date {
+	margin: 0px;
+	padding: 0px 0px 20px;
+	font-size: 15px;
+	font-weight: 600;
+	line-height: 24px;
+	color: #7954b6;
+}
+.app-news .card .card-body .text {
+	margin: 0px;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 24px;
+	color: #565656;
+	padding: 0px 0px 35px;
+}
+.app-news .card .card-body .btn-primary {
+	margin: 0px;
+	padding: 0px 22px;
+	font-size: 14px;
+	font-weight: 400;
+}
+.app-news .card .card-body .btn-primary:hover, .app-news .card .card-body .btn-primary:focus{
+	border: 1px solid #8e5edd;
+	color: #8e5edd;
+	background: transparent;
+}
+/*App news section ends*/
+
+/*app store section starts*/
+.app-store{
+	width: 100%;
+	padding: 80px 0px 0px;
+	background: url("../images/bg4.png") center top no-repeat;
+}
+.app-store .heading05{
+	width: 100%;
+	padding: 0px 0px 100px;
+	text-align: center;
+}
+.app-store .heading05 h2{
+	font-size: 35px;
+	font-weight: 300;
+	line-height: 45px;
+	letter-spacing: 1px;
+	text-transform: capitalize;
+	color: #fff;
+	padding: 30px 0px 40px;
+	margin: 0px;
+}
+.app-store .heading05 p{
+	margin: 0px;
+	font-size: 16px;
+	font-weight: 400;
+	letter-spacing: 0px;
+	line-height: 26px;
+	color: #fff;
+	padding: 0px 0px 50px;
+}
+.app-store .heading05 .line{
+	width: 77px;
+	height: 2px;
+	background-color: #f34791;
+	position: absolute;
+	left: 46%;
+}
+.app-store .heading05 ul {
+	margin: 0px;
+}
+.app-store .heading05 ul li {
+	display: inline-block;
+	list-style: none;
+	padding: 120px 35px 0px;
+}
+.app-store .heading05 ul li a{
+	width: 100%;
+}
+.app-store .heading05 .btn-primary {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 20px;
+	font-weight: 400;
+	background: transparent;
+	border: 2px solid #fff;
+	border-radius: 25px;
+	padding: 5px 25px;
+	color: #fff;
+	transition: 0.7s;
+}
+.app-store .heading05 .btn-primary:hover, .app-store .heading05 .btn-primary:focus{
+	border: 2px solid transparent;
+	color: #000;
+	background: #fff;
+}
+.app-store .heading05 .btn-primary .fa-apple {
+	font-size: 25px;
+	padding: 0px 10px 0px 0px;
+	position: relative;
+	top: 2px;
+}
+.app-store .heading05 .btn-info{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 20px;
+	font-weight: 400;
+	background: transparent;
+	border: 2px solid #fff;
+	border-radius: 25px;
+	padding: 5px 25px;
+	color: #fff;
+	transition: 0.7s;
+}
+.app-store .heading05 .btn-info:hover, .app-store .heading05 .btn-info:focus{
+	border: 2px solid transparent;
+	color: #000;
+	background: #fff;
+}
+.app-store .heading05 .btn-info .fa-android {
+	font-size: 25px;
+	padding: 0px 10px 0px 0px;
+	position: relative;
+	top: 2px;
+}
+/*App store section ends*/
 /*Body ends*/
+
+/*Footer section starts*/
+.foot{
+	width: 100%;
+	padding: 80px 0px;
+}
+/*Footer section ends*/
