--- a/css/style.css
+++ b/css/style.css
@@ -761,5 +761,76 @@ element.style {
 .foot{
 	width: 100%;
 	padding: 80px 0px;
+	background: linear-gradient
+
+}
+.foot .contact-us{
+	width: 100%;
+
+}
+.foot .contact-us h2 {
+    margin: 0px;
+    font-size: 35px;
+    font-weight: 300;
+    line-height: 45px;
+    text-transform: capitalize;
+    padding: 0px 0px 30px;
+    color: #7954b6;
+}
+.foot .contact-us .msg {
+    margin: 0px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    padding: 0px 0px 50px;
+    color: #565656;
+}
+.foot .contact-us .media {
+    margin: 0px !important;
+    padding: 10px 110px;
+}
+.foot .contact-us .media .media-body{
+
+}
+.foot .contact-us .media .media-body p {
+    margin: 0px;
+    padding: 0px 0px 0px 30px;
+    color: #7954b6;
+    font-size: 14px;
+    font-weight: 400;
+    position: relative;
+    top: -5px;
+}
+.foot .contact-us .media img{
+	margin: 0px !important;
+}
+.foot .contact-us .media .mr-1 {
+    width: 5%;
+    /* padding: 0px 0px 0px 0px; */
+}
+.foot .contact-us .media .mr-2 {
+    width: 6%;
+}
+.foot .contact-us .media .mr-3 {
+    width: 5.5%;
+}
+.foot .contact-us ul {
+    margin: 0px;
+    /*text-align: center;*/
+    padding: 80px 0px 0px 155px;
+}
+.foot .contact-us ul li{
+	display: inline-block;
+	list-style: none;
+}
+.foot .contact-us ul li a {
+    font-size: 25px;
+    padding: 0px 8px;
+    color: #000;
+    opacity: .4;
+    transition: 0.7s;
+}
+.foot .contact-us ul li a:hover, .foot .contact-us ul li a:focus{
+	opacity: 1;
 }
 /*Footer section ends*/
